# fiap-mlet-challenge-fase-2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.api  Makefile  README.md  docker-compose.yml  dvc.yaml  main.py  metrics.json  pyproject.toml
.dvc/: config
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: validate-conventions.yml
configs/: config.yaml
data/: raw.dvc
docs/: ARCHITECTURE.md  CODE_GUIDELINES.md  CONTRIBUTING.md  MODEL_CARD.md
notebooks/: eda.ipynb  models.ipynb
scripts/: build_eda_notebook.py  dvc_setup.py  validate_branch.py  validate_commits.py  validate_env.py  validate_tags.py
src/recsys/: __init__.py  config.py  io.py  tracking.py
src/recsys/api/: __init__.py  app.py  serving.py
src/recsys/evaluation/: __init__.py  metrics.py
src/recsys/models/: __init__.py  base.py  baselines.py  bpr.py  bprv2.py  factory.py  svd.py
src/recsys/pipeline/: __init__.py  evaluate.py  feature_eng.py  preprocess.py  train.py
src/recsys/preprocessing/: __init__.py  data.py  sampling.py  split.py
tests/: test_api.py  test_pipeline.py  test_recsys.py  test_validate_commits.py
