[project]
name = "fiap-mlet-challenge-fase-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dagshub>=0.7.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pandera>=0.31.1",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.2",
    "dvc>=3.0.0",
    "kagglehub>=1.0.1",
    "nbconvert>=7.17.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_provider = "pep621"
