[project]
name = "fiap-mlet-challenge-fase-2"
version = "0.1.0"
description = "Sistema de recomendação de filmes (MovieLens) com rede neural BPR em PyTorch, baselines scikit-learn, pipeline DVC, tracking MLflow e API FastAPI."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dagshub>=0.7.0",
    "fastapi>=0.137.1",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pandera>=0.31.1",
    "pyarrow>=24.0.0",
    "pydantic-settings[yaml]>=2.5.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.2",
    "dvc>=3.0.0",
    "httpx>=0.28.1",
    "kagglehub>=1.0.1",
    "nbconvert>=7.17.1",
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_provider = "pep621"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = false

# torch apenas CPU no Linux (Docker/CI não tem GPU); o wheel CUDA + libs NVIDIA
# incham a imagem para ~18 GB. No macOS mantém o wheel padrão (mps/cpu) do PyPI.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
